--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,9 +9,10 @@ coreapi==2.3.3
 coreschema==0.0.4
 cryptography==44.0.0
 defusedxml==0.8.0rc2
-Django==3.2.3
+Django==4.2.17
+django-filter==24.3
 django-templated-mail==1.1.1
-djangorestframework==3.12.4
+djangorestframework==3.15.2
 djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
 idna==3.10
@@ -41,6 +42,7 @@ social-auth-core==4.5.4
 sqlparse==0.5.3
 toml==0.10.2
 typing_extensions==4.12.2
+tzdata==2024.2
 uritemplate==4.1.1
 urllib3==2.3.0
 webcolors==1.11.1
