--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -100,12 +100,12 @@ jobs:
       uses: actions/setup-node@v4
       with:
         # Это параметр воркфлоу, указывающий нужную версию Node.js
-        node-version: 21.7.1
+        node-version: 'v21.7.1-alpine'
     - name: Install dependencies
       # Эта команда устанавливает зависимости для фронтенда
       run: |
         cd frontend/
-        npm install
+        npm ci
     - name: Test frontend
       # Запускаем тесты
       run: |
