--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -100,7 +100,7 @@ jobs:
       uses: actions/setup-node@v4
       with:
         # Это параметр воркфлоу, указывающий нужную версию Node.js
-        node-version: '21.7.1'
+        node-version: 21
     - name: Install dependencies
       # Эта команда устанавливает зависимости для фронтенда
       run: |
