--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -103,9 +103,7 @@ jobs:
         node-version: 21
     - name: Install dependencies
       # Эта команда устанавливает зависимости для фронтенда
-      run: |
-        cd frontend/
-        npm ci
+      run: npm install --legacy-peer-deps
     - name: Test frontend
       # Запускаем тесты
       run: |
