--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,9 @@
 # build env
-FROM node:18
+FROM node:21.7.1-alpine
 WORKDIR /app
-COPY package.json package.json
-COPY package-lock.json package-lock.json
+COPY package*.json ./
 RUN npm install
 COPY . ./
 RUN npm run build
 CMD cp -r build result_build
+
