--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,66 +89,37 @@ jobs:
           # устанавливаем тег latest, чтобы потом
           # на сервере и в docker-compose.yml не указывать версию
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest 
-  frontend_tests:
-    runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up nodeJS
-      # Это готовый воркфлоу для установки Node.js на раннер
-      uses: actions/setup-node@v4
+deploy:
+  runs-on: ubuntu-latest
+  needs: build_and_push_to_docker_hub
+  if: github.ref == 'refs/heads/master'
+  steps:
+    - name: executing remote ssh commands to deploy
+      uses: appleboy/ssh-action@master
       with:
-        # Это параметр воркфлоу, указывающий нужную версию Node.js
-        node-version: 18
-    - name: Install dependencies
-      # Эта команда устанавливает зависимости для фронтенда
-      run: |
-        cd frontend/
-        npm ci --legacy-peer-deps
-    - name: Test frontend
-      # Запускаем тесты
-      run: |
-        cd frontend/
-        npm run test
-  build_frontend_and_push_to_docker_hub:
-    name: Push frontend Docker image to DockerHub
-    runs-on: ubuntu-latest
-    needs: frontend_tests
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v4
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Login to Docker 
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to DockerHub
-        uses: docker/build-push-action@v5
-        with:
-          context: ./frontend/
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USER }}
+        key: ${{ secrets.SSH_KEY }}
+        script: |
+          cd infra/
+          sudo docker-compose stop
+          sudo docker-compose rm backend frontend -f
+          sudo docker image prune -f
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram-backend
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram-frontend
+          
+          # Создаем .env с минимальными переменными
+          cat <<EOF > ~/infra/.env
+          POSTGRES_DB=${{ secrets.POSTGRES_DB }}
+          POSTGRES_USER=${{ secrets.POSTGRES_USER }}
+          POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
+          DB_HOST=${{ secrets.DB_HOST }}
+          EOF
+          
+          # Запускаем контейнеры
+          sudo docker-compose up -d --build
 
-  build_gateway_and_push_to_docker_hub:
-    name: Push gateway Docker image to DockerHub
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v4
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Login to Docker 
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to DockerHub
-        uses: docker/build-push-action@v5
-        with:
-          context: ./gateway/
-          push: true
-          # Тут вместо username должен быть ваш логин на Docker Hub
-          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_gateway:latest
-
+          # Выполняем миграции и сбор статических файлов
+          sudo docker-compose exec -T backend python manage.py migrate
+          sudo docker-compose exec -T backend python manage.py collectstatic --no-input
