--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,9 @@ jobs:
         # Указываем имя тестовой базы, имя и пароль пользователя в открытом виде,
         # ведь эта база будет работать только во время прогона тестов
         env:
-          POSTGRES_USER: django_user
-          POSTGRES_PASSWORD: django_password
-          POSTGRES_DB: django_db
+          POSTGRES_USER: django
+          POSTGRES_PASSWORD: password12321
+          POSTGRES_DB: django
         ports:
           - 5432:5432
         # Эта конструкция описывает проверку готовности сервиса postgres
@@ -41,9 +41,9 @@ jobs:
     - name: Lint with ruff and run django tests
       # Добавляем env-переменные для доступа к БД
       env:
-        POSTGRES_USER: django_user
-        POSTGRES_PASSWORD: django_password
-        POSTGRES_DB: django_db
+        POSTGRES_USER: django
+        POSTGRES_PASSWORD: password12321
+        POSTGRES_DB: django
         # Сервер БД запущен в Docker, но его порт проброшен на хост
         # Поэтому подключаемся к 127.0.0.1:5432
         DB_HOST: 127.0.0.1
@@ -72,8 +72,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          # Хорошо ли держать логин и пароль прямо в коде workflow?
-          # Нет, это нехорошо
       - name: Push to DockerHub
         # Одновременный билд и пуш образа в Docker Hub
         uses: docker/build-push-action@v5
@@ -90,36 +88,36 @@ jobs:
           # на сервере и в docker-compose.yml не указывать версию
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest 
 
-deploy:
-  runs-on: ubuntu-latest
-  needs: build_and_push_to_docker_hub
-  if: github.ref == 'refs/heads/master'
-  steps:
-    - name: executing remote ssh commands to deploy
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USER }}
-        key: ${{ secrets.SSH_KEY }}
-        script: |
-          cd infra/
-          sudo docker-compose stop
-          sudo docker-compose rm backend frontend -f
-          sudo docker image prune -f
-          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram-backend
-          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram-frontend
-          
-          # Создаем .env с минимальными переменными
-          cat <<EOF > ~/infra/.env
-          POSTGRES_DB=${{ secrets.POSTGRES_DB }}
-          POSTGRES_USER=${{ secrets.POSTGRES_USER }}
-          POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
-          DB_HOST=${{ secrets.DB_HOST }}
-          EOF
-          
-          # Запускаем контейнеры
-          sudo docker-compose up -d --build
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: executing remote ssh commands to deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            cd infra/
+            sudo docker-compose stop
+            sudo docker-compose rm backend frontend -f
+            sudo docker image prune -f
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram-backend
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram-frontend
+            
+            # Создаем .env с минимальными переменными
+            cat <<EOF > ~/infra/.env
+            POSTGRES_DB=${{ secrets.POSTGRES_DB }}
+            POSTGRES_USER=${{ secrets.POSTGRES_USER }}
+            POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
+            DB_HOST=${{ secrets.DB_HOST }}
+            EOF
+            
+            # Запускаем контейнеры
+            sudo docker-compose up -d --build
 
-          # Выполняем миграции и сбор статических файлов
-          sudo docker-compose exec -T backend python manage.py migrate
-          sudo docker-compose exec -T backend python manage.py collectstatic --no-input
+            # Выполняем миграции и сбор статических файлов
+            sudo docker-compose exec -T backend python manage.py migrate
+            sudo docker-compose exec -T backend python manage.py collectstatic --no-input
