--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,19 +10,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check out code
-      uses: actions/checkout@v4
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.10"
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip 
-        pip install ruff==0.8.0
-        pip install -r ./backend/requirements.txt
-    - name: Lint with ruff and run django tests
+      - name: Check out code
+        uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install ruff==0.8.0
+          pip install -r ./backend/requirements.txt
+      - name: Lint with ruff
+        run: ruff check .
+      - name: Run Django tests
+        run: python ./backend/manage.py test
 
   build_and_push_to_docker_hub:
     name: Push Docker image to DockerHub
