--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -37,9 +37,10 @@ server {
     
     location / {
         root /usr/share/nginx/html;
-        index  index.html index.htm;
-        try_files $uri /index.html;
+        index  index.html;
+        try_files $uri $uri/ /index.html;
     }
+    
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
       root   /var/html/frontend/;
